--- a/Profile.html
+++ b/Profile.html
@@ -26,7 +26,7 @@
     <title>Profile</title>
 </head>
 <body>
-    <div class=" h-full">
+    <div class="bg-[#F7F7F8] pb-[260px] h-full">
         <!-- navbar -->
         <div class="navbar bg-white py-[11px] flex items-center justify-around">
                 <div class="left-content text-[#2D71B4] font-[600] flex justify-content-center items-center space-x-[34px]">
