--- a/banyak pengirim ke satu penerima/data-pengirim.html
+++ b/banyak pengirim ke satu penerima/data-pengirim.html
@@ -345,7 +345,7 @@
 
     <!--Modal body-->
     <div class="relative p-4 flex flex-col justify-center items-center mb-[200px]">
-        <div class="flex">
+        <div class="flex flex-wrap">
             <div class="flex border border-[#E7E7E7] rounded-lg  items-start mr-[20px]">
                 <div class="flex py-[10px] px-[16px]">
                     <input type="checkbox" name="pecah" id="pecah" class="mt-2 w-[20.25px] h-[20.25px]">
@@ -377,7 +377,7 @@
 
         <div class="flex mt-[20px]">
             <div class="flex border border-[#E7E7E7] rounded-lg  items-start mr-[20px]">
-                <div class="flex py-[10px] px-[16px]">
+                <div class="flex py-[10px] px-[16px] w-[265px]">
                     <input type="checkbox" name="pecah" id="pecah" class="mt-2 w-[20.25px] h-[20.25px]">
                     <div class="flex flex-col ml-2 w-[198px] ">
                         <p class="text-[14px] font-[600] text-[#000000]">Jangan di balik</p>
@@ -391,7 +391,7 @@
             </div>
 
             <div class="flex border border-[#E7E7E7] rounded-lg  items-start">
-                <div class="flex py-[10px] px-[16px]">
+                <div class="flex py-[10px] px-[16px] w-[263px]">
                     <input type="checkbox" name="pecah" id="pecah" class="mt-2 w-[20.25px] h-[20.25px]">
                     <div class="flex flex-col ml-2 w-[198px] ">
                         <p class="text-[14px] font-[600] text-[#000000]">Pendingin</p>
@@ -460,7 +460,7 @@
             </div>
 
             <div class="flex text-[12px] w-[338.5px] border border-[#E7E7E7] rounded-lg p-[12px] items-center hover:border-[#2D71B4]">
-                <input type="radio" name="sameday" id="sameday" class="w-[21px] h-[21px]">
+                <input type="radio" name="sameday" id="sameday" class="w-[25px] h-[25px]">
                 <div class="flex flex-col ml-[10px]">
                     <p class="text-[14px] font-[600] text-[#000000]">Sameday</p>
                     <p class="text-[12px] text-[#5F5F5F]">Kirim barang sangat cepat, kirim hari ini sampai hari ini juga !</p>
@@ -479,13 +479,13 @@
                     <p class="text-center pt-[20px] pb-[10px] text-[24px] font-[600] text-[#000000]">Hari</p>
                     <div class="flex">
                         <div class="flex flex-col mr-[20px]">
-                            <div class="flex border border-[#E7E7E7] p-[10px] rounded-lg w-[148.5px] justify-center text-black font-[500]">
+                            <div class="flex border border-[#E7E7E7] p-[10px] rounded-lg w-[148.5px] justify-center text-black font-[500] cursor-pointer">
                                 <p>Hari ini</p>
                             </div>
                         </div>
 
                         <div class="flex flex-col">
-                            <div class="flex border border-[#E7E7E7] p-[10px] rounded-lg w-[148.5px] justify-center text-black font-[500]">
+                            <div class="flex border border-[#E7E7E7] p-[10px] rounded-lg w-[148.5px] justify-center text-black font-[500] cursor-pointer">
                                 <p>Besok</p>
                             </div>
                         </div>
@@ -493,13 +493,13 @@
 
                     <div class="flex mt-[20px]">
                         <div class="flex flex-col mr-[20px]">
-                            <div class="flex border border-[#E7E7E7] p-[10px] rounded-lg w-[148.5px] justify-center text-black font-[500]">
+                            <div class="flex border border-[#E7E7E7] p-[10px] rounded-lg w-[148.5px] justify-center text-black font-[500] cursor-pointer">
                                 <p>Jum, 13 Jul</p>
                             </div>
                         </div>
 
                         <div class="flex flex-col">
-                            <div class="flex border border-[#E7E7E7] p-[10px] rounded-lg w-[148.5px] justify-center text-black font-[500]">
+                            <div class="flex border border-[#E7E7E7] p-[10px] rounded-lg w-[148.5px] justify-center text-black font-[500] cursor-pointer">
                                 <p>Sab, 14 Jul</p>
                             </div>
                         </div>
@@ -513,13 +513,13 @@
                     <p class="text-center pt-[20px] pb-[10px] text-[24px] font-[600] text-[#000000]">Waktu</p>
                     <div class="flex">
                         <div class="flex flex-col mr-[20px]">
-                            <div class="flex border border-[#E7E7E7] p-[10px] rounded-lg w-[148.5px] justify-center text-black font-[500]">
+                            <div class="flex border border-[#E7E7E7] p-[10px] rounded-lg w-[148.5px] justify-center text-black font-[500] cursor-pointer">
                                 <p>Sekarang</p>
                             </div>
                         </div>
 
                         <div class="flex flex-col">
-                            <div class="flex border border-[#E7E7E7] p-[10px] rounded-lg w-[148.5px] justify-center text-black font-[500]">
+                            <div class="flex border border-[#E7E7E7] p-[10px] rounded-lg w-[148.5px] justify-center text-black font-[500] cursor-pointer">
                                 <p>08.00</p>
                             </div>
                         </div>
@@ -527,13 +527,13 @@
 
                     <div class="flex mt-[20px]">
                         <div class="flex flex-col mr-[20px]">
-                            <div class="flex border border-[#E7E7E7] p-[10px] rounded-lg w-[148.5px] justify-center text-black font-[500]">
+                            <div class="flex border border-[#E7E7E7] p-[10px] rounded-lg w-[148.5px] justify-center text-black font-[500] cursor-pointer">
                                 <p>09.00</p>
                             </div>
                         </div>
 
                         <div class="flex flex-col">
-                            <div class="flex border border-[#E7E7E7] p-[10px] rounded-lg w-[148.5px] justify-center text-black font-[500]">
+                            <div class="flex border border-[#E7E7E7] p-[10px] rounded-lg w-[148.5px] justify-center text-black font-[500] cursor-pointer">
                                 <p>10.00</p>
                             </div>
                         </div>
@@ -541,13 +541,13 @@
 
                     <div class="flex mt-[20px]">
                         <div class="flex flex-col mr-[20px]">
-                            <div class="flex border border-[#E7E7E7] p-[10px] rounded-lg w-[148.5px] justify-center text-black font-[500]">
+                            <div class="flex border border-[#E7E7E7] p-[10px] rounded-lg w-[148.5px] justify-center text-black font-[500] cursor-pointer">
                                 <p>11.00</p>
                             </div>
                         </div>
 
                         <div class="flex flex-col">
-                            <div class="flex border border-[#E7E7E7] p-[10px] rounded-lg w-[148.5px] justify-center text-black font-[500]">
+                            <div class="flex border border-[#E7E7E7] p-[10px] rounded-lg w-[148.5px] justify-center text-black font-[500] cursor-pointer">
                                 <p>12.00</p>
                             </div>
                         </div>
@@ -555,13 +555,13 @@
 
                     <div class="flex mt-[20px]">
                         <div class="flex flex-col mr-[20px]">
-                            <div class="flex border border-[#E7E7E7] p-[10px] rounded-lg w-[148.5px] justify-center text-black font-[500]">
+                            <div class="flex border border-[#E7E7E7] p-[10px] rounded-lg w-[148.5px] justify-center text-black font-[500] cursor-pointer">
                                 <p>13.00</p>
                             </div>
                         </div>
 
                         <div class="flex flex-col">
-                            <div class="flex border border-[#E7E7E7] p-[10px] rounded-lg w-[148.5px] justify-center text-black font-[500]">
+                            <div class="flex border border-[#E7E7E7] p-[10px] rounded-lg w-[148.5px] justify-center text-black font-[500] cursor-pointer">
                                 <p>14.00</p>
                             </div>
                         </div>
@@ -569,13 +569,13 @@
 
                     <div class="flex mt-[20px]">
                         <div class="flex flex-col mr-[20px]">
-                            <div class="flex border border-[#E7E7E7] p-[10px] rounded-lg w-[148.5px] justify-center text-black font-[500]">
+                            <div class="flex border border-[#E7E7E7] p-[10px] rounded-lg w-[148.5px] justify-center text-black font-[500] cursor-pointer">
                                 <p>15.00</p>
                             </div>
                         </div>
 
                         <div class="flex flex-col">
-                            <div class="flex border border-[#E7E7E7] p-[10px] rounded-lg w-[148.5px] justify-center text-black font-[500]">
+                            <div class="flex border border-[#E7E7E7] p-[10px] rounded-lg w-[148.5px] justify-center text-black font-[500] cursor-pointer">
                                 <p>16.00</p>
                             </div>
                         </div>
