--- a/Cakupan-wilayah.html
+++ b/Cakupan-wilayah.html
@@ -63,11 +63,11 @@
 
     <div class="flex flex-col w-[1100px] pb-[200px] lg:ml-[70px]">
         <div class="">
-            <p class="text-[#2D71B4] text-[40px] font-[600]">Jangkauan Tiketux KUY</p>
-            <p class="text-[#5F5F5F] text-[16px] font-[400]">Saat ini pengiriman Tiketux Kuy sudah menjangkau total 51 kecamatan se Bandung Raya meliputi kecamatan di Kabupaten Bandung - Kabupaten Bandung Barat - Kota Bandung - Kota Cimahi. Cek daftar jangkauan pengiriman Tiketux Kuy di bawah ini sebelum kirim paket:</p>
+            <p class="text-[#2D71B4] text-[20px] lg:text-[40px] md:text-[40px] font-[600]">Jangkauan Tiketux KUY</p>
+            <p class="text-[#5F5F5F] text-[16px] font-[400] w-[350px] lg:w-full md:w-full">Saat ini pengiriman Tiketux Kuy sudah menjangkau total 51 kecamatan se Bandung Raya meliputi kecamatan di Kabupaten Bandung - Kabupaten Bandung Barat - Kota Bandung - Kota Cimahi. Cek daftar jangkauan pengiriman Tiketux Kuy di bawah ini sebelum kirim paket:</p>
         </div>
 
-        <div class="flex flex-row mt-[30px] mb-[50px]">
+        <div class="flex flex-col lg:flex-row mt-[30px] mb-[50px]">
             <div class="flex flex-col w-[347px] mr-[65px]">
                 <a href="./Pilih-jenis-pengiriman.html" class="bg-[#2D71B4] text-white rounded-md py-[12px] mb-[14px] text-center">
                     <button class="">Reservasi Sekarang</button>
@@ -127,7 +127,7 @@
         </div>
 
         <div class="">
-            <p class="text-[#5F5F5F] text-[16px] font-[400]">Nah, selain daerah-daerah yang disebutkan di atas, kamu juga bisa cek keterjangkauan pengiriman Tiketux Kuy di halaman ini, scroll ke bawah sampai menu 'Cakupan Wilayan Pengiriman'. Saatnya kirim barang dan makanan lebih hemat pakai Tiketux Kuy! Ongkir FLAT sampai dengan 3kg se Bandung Raya.</p>
+            <p class="text-[#5F5F5F] text-[16px] font-[400] w-[350px] lg:w-full md:w-full">Nah, selain daerah-daerah yang disebutkan di atas, kamu juga bisa cek keterjangkauan pengiriman Tiketux Kuy di halaman ini, scroll ke bawah sampai menu 'Cakupan Wilayan Pengiriman'. Saatnya kirim barang dan makanan lebih hemat pakai Tiketux Kuy! Ongkir FLAT sampai dengan 3kg se Bandung Raya.</p>
         </div>
     </div>
 
