--- a/Landing-page.html
+++ b/Landing-page.html
@@ -100,7 +100,7 @@
     </div>
 
     <!-- service/layanan -->
-    <div class="flex mb-[100px] mt-[400px] justify-evenly mx-[80px]">
+    <div class="flex flex-col lg:flex-row mb-[100px] mt-[400px] justify-evenly mx-[80px]">
         <div class="flex flex-col w-[350px]">
             <span class="text-[#2D71B4] text-[40px] font-[600]">Layanan Kita</span>
             <span class="text-[#5F5F5F] text-[17px] font-[400]">KUY reservasi dan kirim paketmu sekarang juga!</span>
@@ -111,8 +111,8 @@
             <button class="bg-[#079849] text-white rounded-md py-[12px]">Whatsapp</button> 
         </div>
         
-        <div class="flex flex-col ml-[48px] ml-[40px]">
-            <div class="flex space-x-[20px] mb-[20px]">
+        <div class="flex flex-col lg:ml-[40px]">
+            <div class="flex flex-col lg:flex-row space-x-[20px] mb-[20px]">
 
                 <div class="card bg-white flex flex-col max-w-[360px] p-[22px] rounded-md">
                     <div class="flex flex-row">
@@ -151,7 +151,7 @@
     </div>
 
     <!-- etalase kuy -->
-    <div class="bg-[#CAFFE9] flex w-[1100px] items-center rounded-md ml-[80px]">
+    <div class="bg-[#CAFFE9] flex w-full lg:w-[1100px] items-center rounded-md md:ml-[50px] lg:ml-[80px] flex-col lg:flex-row">
         <img src="./assets/people2.png" alt="assets-kuy" class="w-[285px] h-[305px]">
 
         <div class="flex flex-col items-center">
