--- a/Profile.html
+++ b/Profile.html
@@ -97,8 +97,8 @@
                             <p class="text-[#5F5F5F] text-[14px] font-[500]">Kuy Points</p>
 
                             <div class="flex">
-                                <img src="" alt="">
-                                <p class="text-[#2D71B4] ">10.000</p>
+                                <img src="./assets/point-kuy.png" alt="icon-point-kuy">
+                                <p class="text-[#2D71B4] ml-[10px]">10.000</p>
                             </div>
                         </div>
                     </a
