--- a/banyak pengirim ke satu penerima/konfirmasi-pesanan.html
+++ b/banyak pengirim ke satu penerima/konfirmasi-pesanan.html
@@ -45,7 +45,7 @@
                 </a>
             </div>
 
-            <a href="./Login.html" class="rounded-md text-[#2D71B4] border border-[#2D71B4] items-center py-[6px] px-[16px]">
+            <a href="../Login.html" class="rounded-md text-[#2D71B4] border border-[#2D71B4] items-center py-[6px] px-[16px]">
                 Login
             </a>
         </div>
