--- a/1 pengirim 1 penerima/data-penerima.html
+++ b/1 pengirim 1 penerima/data-penerima.html
@@ -44,12 +44,11 @@
                 </a>
             </div>
 
-            <a href="./Login.html" class="rounded-md text-[#2D71B4] border border-[#2D71B4] items-center py-[6px] px-[16px]">
+            <a href="../Login.html" class="rounded-md text-[#2D71B4] border border-[#2D71B4] items-center py-[6px] px-[16px]">
                 Login
             </a>
         </div>
     </div>
-
     
     <div class="flex flex-col justify-center items-center mt-[50px]">
         <p class="text-[#2D71B4] text-[40px] font-[600] mb-[10px]">1 Pengirim ke 1 Penerima</p>   
