--- a/Login.html
+++ b/Login.html
@@ -59,6 +59,10 @@
                 </a>
             </div>
         </div>
+
+        <div class="">
+            <img src="" alt="">
+        </div>
     </div>
 </div>
 </body>
