--- a/banyak pengirim ke satu penerima/data-penerima.html
+++ b/banyak pengirim ke satu penerima/data-penerima.html
@@ -74,10 +74,11 @@
         </div>
     </div>
 
+    <!-- card -->
     <div class="p-[30px] mt-[20px] text-[14px] font-[600] flex justify-center rounded-md text-[#000000]">
         <div class="flex flex-col justify-center bg-white p-[30px] rounded-lg">
             <div class="flex mb-[10px]">
-                <img src="../assets/pengiriman/Penerima.png" alt="icon-penerima-kuy" class="w-[36px] h-[36px]">
+                <img src="../assets/pengiriman/Penerima.png" alt="icon-penerima-kuy">
                 <p class="text-[24px] font-[600] ml-[10px] ">Detail Penerima</p>
             </div>
 
@@ -94,9 +95,9 @@
                     <label for="teleponPenerima">Nomor Telepon Penerima</label>
                     <input type="text" name="teleponPenerima" id="teleponPenerima" placeholder="08xxxxx" class="border border-[#E7E7E7] rounded-md px-[10px] py-[5px] mt-2">
                 </div>
-                <div class="flex flex-col w-[343px] ml-[20px]">
+                <div class="flex flex-col w-[343px] lg:ml-[20px] md:ml-[15px]">
                     <label for="namaPenerima">Nama Penerima</label>
-                    <input type="text" name="namaPenerima" id="namaPenerima" placeholder="Isi Nama" class="border border-[#E7E7E7] rounded-md px-[10px] py-[5px] mt-2">
+                    <input type="text" name="namaPenerima" id="namaPenerima" placeholder="08xxxxx" class="border border-[#E7E7E7] rounded-md px-[10px] py-[5px] mt-2">
                 </div>
             </div>
 
@@ -115,13 +116,13 @@
                     </div>
                     <input type="text" name="alamatPenerima" id="alamatPenerima" class="h-[66px] border border-[#E7E7E7] rounded-md mt-2 px-[10px] py-[5px] " placeholder="Nama Kota, Jalan">
                 </div>
-                <div class="flex flex-col w-[343px] ml-[20px]">
+                <div class="flex flex-col w-[343px] lg:ml-[20px] md:ml-[15px]">
                     <label for="namaPenerima">Patokan</label>
                     <input type="text" name="patokan" id="patokan" placeholder="Opsional" class="border border-[#E7E7E7] rounded-md px-[10px] py-[5px] mt-2">
                 </div>
             </div>
 
-            <div class="border border-[#E7E7E7] rounded-md mt-[20px] h-[97px] flex justify-center w-[343px] flex-wrap">
+            <div class="border border-[#E7E7E7] rounded-md mt-[20px] h-[97px] flex justify-center w-[343px]">
                 <a href="" class="flex justify-center items-center">
                     <img src="../assets/pengiriman/location.png" alt="icon-location-kuy">
                     <a 
@@ -134,9 +135,9 @@
                 </a>
             </div>
 
-            <div class="flex justify-end">
+            <div class="flex justify-start lg:justify-end md:justify-end">
                 <a href="./konfirmasi-pesanan.html">
-                    <button class="bg-[#EEEEEE] p-[10px] w-[122px] rounded-lg font-[600] hover:bg-[#2D71B4] hover:text-white">Lanjut</button>
+                    <button class="mt-2 bg-[#EEEEEE] p-[10px] w-[122px] rounded-lg font-[600] hover:bg-[#2D71B4] hover:text-white">Lanjut</button>
                 </a>
             </div>
         </div>
