--- a/1 pengirim 1 penerima/1pengirim-1penerima.html
+++ b/1 pengirim 1 penerima/1pengirim-1penerima.html
@@ -76,12 +76,12 @@
     <!-- card -->
     <div class="p-[30px] mt-[20px] text-[14px] font-[600] flex justify-center rounded-md text-[#000000]">
         <div class="flex flex-col justify-center bg-white p-[30px] rounded-lg">
-            <div class="flex mb-[10px]">
+            <div class="flex mb-[10px] ml-[55px] lg:ml-1 md:ml-1">
                 <img src="../assets/pengiriman/Pengirim.png" alt="icon-pengirim-kuy" class="w-[36px] h-[36px]">
                 <p class="text-[24px] font-[600] ml-[10px] ">Detail Pengirim</p>
             </div>
 
-            <div class="flex mb-[10px]">
+            <div class="flex mb-[10px] ml-[55px] lg:ml-1 md:ml-1">
                 <p class="mr-[10px]">Pemesan adalah Pengirim</p>
                 <div class="relative inline-block w-10 mr-2 align-middle select-none transition duration-200 ease-in h-6">
                     <input type="checkbox" name="toggle" id="toggle" class="toggle-checkbox absolute block w-6 h-6 rounded-full bg-white border-4 appearance-none cursor-pointer"/>
@@ -171,7 +171,7 @@
                     </div>
                 </div>
 
-                <div class="flex flex-col w-[343px] ml-[20px]">
+                <div class="flex flex-col w-[343px] lg:ml-[20px] md:ml-[15px]">
                     <label for="patokan" class="mt-[20px]">Patokan</label>
                     <input type="text" name="patokan" id="patokan" placeholder="Opsional" class="border border-[#E7E7E7] rounded-md px-[10px] py-[5px] mt-2">
                 </div>
@@ -180,7 +180,7 @@
             <div class="flex flex-wrap justify-center">
 
                 <div class="flex flex-col justify-center">
-                    <div class="w-[343px] h-[98px] border border-[#2D71B4] rounded-md px-[10px] py-[6px] relative">
+                    <div class="mt-2 w-[343px] h-[98px] border border-[#2D71B4] rounded-md px-[10px] py-[6px] relative">
                         <div class="flex flex-col">
                             <p class="text-[12px]">Pilih Layanan & Waktu penjemputan</p>
                             <p class="text-[#5F5F5F] text-[10px] w-[229px]">ada beberapa layanan yang dapat sesuai dengan kebutuhan kamu</p>
@@ -205,7 +205,7 @@
                     </div>
                 </div>
 
-                <div class="w-[343px] h-[98px] border border-[#2D71B4] rounded-md px-[10px] py-[6px] ml-[20px] flex relative">
+                <div class="mt-2 w-[343px] h-[98px] border border-[#2D71B4] rounded-md px-[10px] py-[6px] lg:ml-[20px] md:ml-[15px] flex relative">
                     <div class="flex flex-col">
                         <p class="text-[12px]">Perlindungan ekstra</p>
                         <p class="text-[#5F5F5F] text-[10px] w-[229px]">Perlindungna lebih untuk mengamankan paket kamu</p>
