--- a/1 pengirim 1 penerima/data-penerima.html
+++ b/1 pengirim 1 penerima/data-penerima.html
@@ -73,6 +73,7 @@
         </div>
     </div>
  
+    <!-- card -->
     <div class="p-[30px] mt-[20px] text-[14px] font-[600] flex justify-center rounded-md text-[#000000]">
         <div class="flex flex-col justify-center bg-white p-[30px] rounded-lg">
             <div class="flex mb-[10px]">
@@ -133,9 +134,9 @@
                 </a>
             </div>
 
-            <div class="flex justify-end">
+            <div class="flex justify-start lg:justify-end md:justify-end">
                 <a href="./konfirmasi-pesanan.html">
-                    <button class="bg-[#EEEEEE] p-[10px] w-[122px] rounded-lg font-[600] hover:bg-[#2D71B4] hover:text-white">Lanjut</button>
+                    <button class="mt-2 bg-[#EEEEEE] p-[10px] w-[122px] rounded-lg font-[600] hover:bg-[#2D71B4] hover:text-white">Lanjut</button>
                 </a>
             </div>
         </div>
