--- a/1 pengirim ke banyak penerima/data-penerima.html
+++ b/1 pengirim ke banyak penerima/data-penerima.html
@@ -78,12 +78,12 @@
     <!-- card -->
     <div class="p-[30px] mt-[20px] text-[14px] font-[600] flex justify-center rounded-md text-[#000000]">
         <div class="flex flex-col justify-center bg-white p-[30px] rounded-lg">
-            <div class="flex mb-[10px]">
-                <img src="../assets/pengiriman/Penerima.png" alt="icon-pengirim-kuy" class="w-[36px] h-[36px]">
-                <p class="text-[24px] font-[600] ml-[10px] ">Detail Penerima</p>
+            <div class="flex mb-[10px] ml-[55px] lg:ml-1 md:ml-1">
+                <img src="../assets/pengiriman/Pengirim.png" alt="icon-pengirim-kuy" class="w-[36px] h-[36px]">
+                <p class="text-[24px] font-[600] ml-[10px] ">Detail Pengirim</p>
             </div>
 
-            <div class="flex mb-[10px]">
+            <div class="flex mb-[10px] ml-[55px] lg:ml-1 md:ml-1">
                 <p class="mr-[10px]">Pemesan adalah Pengirim</p>
                 <div class="relative inline-block w-10 mr-2 align-middle select-none transition duration-200 ease-in h-6">
                     <input type="checkbox" name="toggle" id="toggle" class="toggle-checkbox absolute block w-6 h-6 rounded-full bg-white border-4 appearance-none cursor-pointer"/>
@@ -91,7 +91,7 @@
                 </div>
             </div>
 
-            <div class="flex flex-wrap">
+            <div class="flex flex-wrap justify-center items-center">
                 <div class="flex flex-col w-[343px]">
                     <label for="teleponPengirim">No Telepon Pengirim</label>
                     <input type="text" name="teleponPengirim" id="teleponPengirim" placeholder="08xxxxx" class="border border-[#E7E7E7] rounded-md px-[10px] py-[5px] mt-2">
@@ -102,7 +102,7 @@
                 </div>
             </div>
 
-            <div class="flex mt-[20px] flex-wrap">
+            <div class="flex mt-[20px] flex-wrap justify-center">
                 <div class="flex flex-col w-[343px]">
                     <div class="flex justify-between">
                         <label for="alamatPenerima">Alamat</label>
@@ -123,22 +123,22 @@
                 </div>
             </div>
 
-            <div class="flex flex-wrap">
+            <div class="flex flex-wrap justify-center">
                 <div class="border border-[#E7E7E7] rounded-md mt-[20px] h-[97px] flex justify-center w-[343px]">
                     <a href="" class="flex justify-center items-center">
                         <img src="../assets/pengiriman/location.png" alt="icon-location-kuy">
                         <a 
-                        class="items-center justify-center flex cursor-pointer"
-                        type="button"
-                        data-te-toggle="modal"
-                        data-te-target="#modalTitikPengiriman"
-                        data-te-ripple-init>
-                        <p class="ml-[10px]">Pilih Titik Pengiriman</p>
-                    </a>
+                            class="items-center justify-center flex cursor-pointer"
+                            type="button"
+                            data-te-toggle="modal"
+                            data-te-target="#modalTitikPengiriman"
+                            data-te-ripple-init>
+                            <p class="ml-[10px]">Pilih Titik Pengiriman</p>
+                        </a>
                     </a>
                 </div>
 
-                <div class="h-[98px] w-[343px] flex flex-col mt-[18px]  lg:ml-[20px] md:ml-[15px]">
+                <div class="h-[98px] w-[343px] flex flex-col mt-[18px] lg:ml-[20px] md:ml-[15px]">
                     <label for="jenisBarang" class="">Jenis Barang</label>
                     <select name="jenisBarang" id="jenisBarang" class="border border-[#E7E7E7] rounded-md px-[10px] py-[5px] mt-2">
                         <option value="" disabled selected hidden class="text-[#5F5F5F]">Pilih Jenis</option>
@@ -151,8 +151,8 @@
                 </div>
             </div>
 
-            <div class="flex">
-                <div class="w-[343px] h-[98px] border border-[#2D71B4] rounded-md px-[10px] py-[6px] my-[20px] flex relative">
+            <div class="flex flex-wrap justify-center">
+                <div class="w-[343px] h-[98px] border border-[#2D71B4] rounded-md px-[10px] py-[6px] lg:my-[20px] md:my-[15px] flex relative">
                     <div class="flex flex-col justify-between">
                         <div class="flex-col flex">
                             <p class="text-[12px]">Pilih Ukuran Barang</p>
@@ -173,16 +173,16 @@
                     </div>
                 </div>
 
-                <div class="flex flex-col w-[343px] ml-[20px]">
+                <div class="flex flex-col w-[343px] lg:ml-[20px] md:ml-[15px]">
                     <label for="patokan" class="mt-[20px]">Patokan</label>
                     <input type="text" name="patokan" id="patokan" placeholder="Opsional" class="border border-[#E7E7E7] rounded-md px-[10px] py-[5px] mt-2">
                 </div>
             </div>
 
-            <div class="flex">
+            <div class="flex flex-wrap justify-center">
 
-                <div class="flex flex-col">
-                    <div class="w-[343px] h-[98px] border border-[#2D71B4] rounded-md px-[10px] py-[6px] relative">
+                <div class="flex flex-col justify-center">
+                    <div class="mt-2 w-[343px] h-[98px] border border-[#2D71B4] rounded-md px-[10px] py-[6px] relative">
                         <div class="flex flex-col">
                             <p class="text-[12px]">Pilih Layanan & Waktu penjemputan</p>
                             <p class="text-[#5F5F5F] text-[10px] w-[229px]">ada beberapa layanan yang dapat sesuai dengan kebutuhan kamu</p>
@@ -195,7 +195,7 @@
                                 class="w-[113px] border border-[#2D71B4] rounded-3xl mt-[10px] text-[#2D71B4] text-[12px]">Pilih Layanan</button>
                         </div>
 
-                        <div class="flex flex-col justify-end">
+                        <div class="flex flex-col justify-end ">
                             <img src="../assets/pengiriman/Ellipse.png" alt="icon-ellipse-kuy" class="absolute right-0 bottom-0 rounded-br-md">
                             <img src="../assets/pengiriman/motor.png" alt="icon-motor-kuy" class="w-[65.92px] h-[67px] absolute right-2">
                         </div>
@@ -207,7 +207,7 @@
                     </div>
                 </div>
 
-                <div class="w-[343px] h-[98px] border border-[#2D71B4] rounded-md px-[10px] py-[6px] ml-[20px] flex relative">
+                <div class="mt-2 w-[343px] h-[98px] border border-[#2D71B4] rounded-md px-[10px] py-[6px] lg:ml-[20px] md:ml-[15px] flex relative">
                     <div class="flex flex-col">
                         <p class="text-[12px]">Perlindungan ekstra</p>
                         <p class="text-[#5F5F5F] text-[10px] w-[229px]">Perlindungna lebih untuk mengamankan paket kamu</p>
@@ -228,7 +228,7 @@
             </div>
 
             <div class="flex justify-end mt-[60px]">
-                <a href="./konfirmasi-pesanan.html">
+                <a href="./data-penerima.html">
                     <button class="bg-[#EEEEEE] p-[10px] w-[122px] rounded-lg font-[600] hover:bg-[#2D71B4] hover:text-white">Lanjut</button>
                 </a>
             </div>
