--- a/1 pengirim ke banyak penerima/data-pengirim.html
+++ b/1 pengirim ke banyak penerima/data-pengirim.html
@@ -74,11 +74,12 @@
         </div>
     </div>
 
+    <!-- card -->
     <div class="p-[30px] mt-[20px] text-[14px] font-[600] flex justify-center rounded-md text-[#000000]">
         <div class="flex flex-col justify-center bg-white p-[30px] rounded-lg">
             <div class="flex mb-[10px]">
-                <img src="../assets/pengiriman/Pengirim.png" alt="icon-penerima-kuy" class="w-[36px] h-[36px]">
-                <p class="text-[24px] font-[600] ml-[10px] ">Detail Pengirim</p>
+                <img src="../assets/pengiriman/Penerima.png" alt="icon-penerima-kuy" class="w-[35px] h-[35px]">
+                <p class="text-[24px] font-[600] ml-[10px] ">Detail Penerima</p>
             </div>
 
             <div class="flex mb-[10px]">
@@ -96,7 +97,7 @@
                 </div>
                 <div class="flex flex-col w-[343px] lg:ml-[20px] md:ml-[15px]">
                     <label for="namaPenerima">Nama Penerima</label>
-                    <input type="text" name="namaPenerima" id="namaPenerima" placeholder="Isi Nama" class="border border-[#E7E7E7] rounded-md px-[10px] py-[5px] mt-2">
+                    <input type="text" name="namaPenerima" id="namaPenerima" placeholder="08xxxxx" class="border border-[#E7E7E7] rounded-md px-[10px] py-[5px] mt-2">
                 </div>
             </div>
 
@@ -111,7 +112,7 @@
                             data-te-target="#modalAlamatTersimpan"
                             data-te-ripple-init >
                             <p class="text-[#2D71B4] text-[12px] font-[500]">Alamat Tersimpan</p>
-                    </a>
+                        </a>
                     </div>
                     <input type="text" name="alamatPenerima" id="alamatPenerima" class="h-[66px] border border-[#E7E7E7] rounded-md mt-2 px-[10px] py-[5px] " placeholder="Nama Kota, Jalan">
                 </div>
@@ -134,9 +135,9 @@
                 </a>
             </div>
 
-            <div class="flex justify-end">
-                <a href="./data-penerima.html">
-                    <button class="bg-[#EEEEEE] p-[10px] w-[122px] rounded-lg font-[600] hover:bg-[#2D71B4] hover:text-white">Lanjut</button>
+            <div class="flex justify-start lg:justify-end md:justify-end">
+                <a href="./konfirmasi-pesanan.html">
+                    <button class="mt-2 bg-[#EEEEEE] p-[10px] w-[122px] rounded-lg font-[600] hover:bg-[#2D71B4] hover:text-white">Lanjut</button>
                 </a>
             </div>
         </div>
