--- a/1 pengirim 1 penerima/konfirmasi-pesanan.html
+++ b/1 pengirim 1 penerima/konfirmasi-pesanan.html
@@ -91,7 +91,11 @@
                 </div>
             </div>
 
-            <div class="flex px-[30px]">
+            <svg xmlns="http://www.w3.org/2000/svg" width="837" height="4" viewBox="0 0 837 4" fill="none">
+                <path d="M0 2L837 2" stroke="#890000" stroke-width="4" stroke-miterlimit="1.40251" stroke-linecap="round" stroke-linejoin="round" stroke-dasharray="16 16"/>
+              </svg>
+
+            <div class="flex px-[30px] mt-4">
                 <img src="../assets/pengiriman/Pengirim.png" alt="icon-pengirim-kuy" class="w-[30px] h-[30px] mr-[10px]">
                 <p class="text-[20px] font-[600]">Detail Pengirim</p>
             </div>
