--- a/1 pengirim ke banyak penerima/data-penerima.html
+++ b/1 pengirim ke banyak penerima/data-penerima.html
@@ -228,7 +228,7 @@
             </div>
 
             <div class="flex justify-end mt-[60px]">
-                <a href="./data-penerima.html">
+                <a href="./konfirmasi-pesanan.html">
                     <button class="bg-[#EEEEEE] p-[10px] w-[122px] rounded-lg font-[600] hover:bg-[#2D71B4] hover:text-white">Lanjut</button>
                 </a>
             </div>
