--- a/1 pengirim ke banyak penerima/data-pengirim.html
+++ b/1 pengirim ke banyak penerima/data-pengirim.html
@@ -136,7 +136,7 @@
             </div>
 
             <div class="flex justify-start lg:justify-end md:justify-end">
-                <a href="./konfirmasi-pesanan.html">
+                <a href="./data-penerima.html">
                     <button class="mt-2 bg-[#EEEEEE] p-[10px] w-[122px] rounded-lg font-[600] hover:bg-[#2D71B4] hover:text-white">Lanjut</button>
                 </a>
             </div>
