--- a/banyak pengirim ke satu penerima/data-penerima.html
+++ b/banyak pengirim ke satu penerima/data-penerima.html
@@ -78,7 +78,7 @@
     <div class="p-[30px] mt-[20px] text-[14px] font-[600] flex justify-center rounded-md text-[#000000]">
         <div class="flex flex-col justify-center bg-white p-[30px] rounded-lg">
             <div class="flex mb-[10px]">
-                <img src="../assets/pengiriman/Penerima.png" alt="icon-penerima-kuy">
+                <img src="../assets/pengiriman/Penerima.png" alt="icon-penerima-kuy" class="w-[36px] h-[36px]">
                 <p class="text-[24px] font-[600] ml-[10px] ">Detail Penerima</p>
             </div>
 
