responsive design landing page

--- a/Cek-paket.html
+++ b/Cek-paket.html
@@ -59,7 +59,7 @@
             </div>
 
             <div class="flex justify-center">
-                <input type="text" name="search" id="search" placeholder="Masukan Kode Resi, contoh: xxxxxxx , xxxxxxx , xxxxxxx" class="lg:w-[820px] lg:h-[52px] w-[248px] h-[30px] rounded-md border border-[#606060] mr-[20px] placeholder:p-[6px] placeholder:text-[12px]">
+                <input type="text" name="search" id="search" placeholder="Masukan Kode Resi, contoh: xxxxxxx , xxxxxxx , xxxxxxx" class="lg:w-[820px] lg:h-[52px] w-[248px] h-[30px] rounded-md border border-[#606060] mr-[20px] placeholder:p-[6px] placeholder:text-[12px] lg:placeholder:text-[16px]">
                 <button class="bg-[#2D71B4] text-white py-[12px] rounded-md text-[18px] font-[600] w-[228px] h-[52px] hidden lg:block">Cek Paket</button>
 
                 <!-- mobile -->
