--- a/Cakupan-wilayah.html
+++ b/Cakupan-wilayah.html
@@ -32,8 +32,8 @@
         </div>
     </div>
 
-    <div class="bg-white rounded-md flex justify-evenly mt-[50px] mb-[100px] card w-[1100px] py-[20px] lg:ml-[70px] sm:flex-wrap">
-        <div class="flex flex-col sm:flex-wrap">
+    <div class="mx-6 md:mx-0 lg:mx-0 bg-white rounded-md flex flex-col md:flex-row lg:flex-row justify-evenly mt-[50px] mb-[100px] card w-[90%] lg:w-[1100px] md:w-[1000px] py-[20px] lg:ml-[70px] sm:flex-wrap">
+        <div class="flex flex-col sm:flex-wrap justify-center items-center md:items-start lg:items-start">
             <p class="text-[#2D71B4] text-[30px] font-[600] mb-[20px]">Cakupan Wilayah</p>
             <input type="text" name="search" id="search" placeholder="Cari alamat disini" class="border-[#E0E0E0] border w-[265px] rounded-md p-[10px]">
             <span class="text-[#818181] text-[12px] font-[500] mb-[10px] pt-2">Sering Dicari :</span>
@@ -56,19 +56,19 @@
 
         </div>
 
-        <div class="">
+        <div class="hidden lg:block md:block">
             <img src="./assets/cakupan-wilayah/maps.png" alt="maps" class="rounded-md w-[711px] h-[400px]">
         </div>
     </div>
 
-    <div class="flex flex-col w-[1100px] pb-[200px] lg:ml-[70px]">
+    <div class="flex flex-col w-[1100px] pb-[200px] lg:ml-[70px] p-6 lg:p-0 md:p-0 pl-[40px] md:pl-0 lg:pl-0">
         <div class="">
-            <p class="text-[#2D71B4] text-[20px] lg:text-[40px] md:text-[40px] font-[600]">Jangkauan Tiketux KUY</p>
-            <p class="text-[#5F5F5F] text-[16px] font-[400] w-[350px] lg:w-full md:w-full">Saat ini pengiriman Tiketux Kuy sudah menjangkau total 51 kecamatan se Bandung Raya meliputi kecamatan di Kabupaten Bandung - Kabupaten Bandung Barat - Kota Bandung - Kota Cimahi. Cek daftar jangkauan pengiriman Tiketux Kuy di bawah ini sebelum kirim paket:</p>
+            <p class="text-[#2D71B4] text-[30px] lg:text-[40px] md:text-[40px] font-[600]">Jangkauan Tiketux KUY</p>
+            <p class="text-[#5F5F5F] text-[16px] font-[400] w-[350px] lg:w-full md:w-full text-justify">Saat ini pengiriman Tiketux Kuy sudah menjangkau total 51 kecamatan se Bandung Raya meliputi kecamatan di Kabupaten Bandung - Kabupaten Bandung Barat - Kota Bandung - Kota Cimahi. Cek daftar jangkauan pengiriman Tiketux Kuy di bawah ini sebelum kirim paket:</p>
         </div>
 
         <div class="flex flex-col lg:flex-row mt-[30px] mb-[50px]">
-            <div class="flex flex-col w-[347px] mr-[65px]">
+            <div class="flex flex-col w-[347px] mr-[65px] mb-4">
                 <a href="./Pilih-jenis-pengiriman.html" class="bg-[#2D71B4] text-white rounded-md py-[12px] mb-[14px] text-center">
                     <button class="">Reservasi Sekarang</button>
                 </a>
@@ -126,8 +126,8 @@
             </div>
         </div>
 
-        <div class="">
-            <p class="text-[#5F5F5F] text-[16px] font-[400] w-[350px] lg:w-full md:w-full">Nah, selain daerah-daerah yang disebutkan di atas, kamu juga bisa cek keterjangkauan pengiriman Tiketux Kuy di halaman ini, scroll ke bawah sampai menu 'Cakupan Wilayan Pengiriman'. Saatnya kirim barang dan makanan lebih hemat pakai Tiketux Kuy! Ongkir FLAT sampai dengan 3kg se Bandung Raya.</p>
+        <div class="mb-10">
+            <p class="text-[#5F5F5F] text-[16px] font-[400] w-[350px] lg:w-full md:w-full text-justify">Nah, selain daerah-daerah yang disebutkan di atas, kamu juga bisa cek keterjangkauan pengiriman Tiketux Kuy di halaman ini, scroll ke bawah sampai menu 'Cakupan Wilayan Pengiriman'. Saatnya kirim barang dan makanan lebih hemat pakai Tiketux Kuy! Ongkir FLAT sampai dengan 3kg se Bandung Raya.</p>
         </div>
     </div>
 
