--- a/1 pengirim 1 penerima/1pengirim-1penerima.html
+++ b/1 pengirim 1 penerima/1pengirim-1penerima.html
@@ -52,12 +52,12 @@
 
     
     <div class="flex flex-col justify-center items-center mt-[50px]">
-        <p class="text-[#2D71B4] text-[40px] font-[600] mb-[10px]">1 Pengirim ke 1 Penerima</p>   
-        <hr class="w-[852px] border border-[#2D71B4] mb-[10px]">
+        <p class="text-[#2D71B4] text-[40px] font-[600] mb-[10px] text-center">1 Pengirim ke 1 Penerima</p>   
+        <hr class="lg:w-[852px] md:w-[752px] w-full border border-[#2D71B4] mb-[10px]">
         <div class="flex flex-row">
             <div class="flex bg-[#2D71B4] rounded-3xl text-white p-[6px] mr-[20px] justify-center items-center">
                 <p class="mr-[9px] bg-white text-[#2D71B4] py-[5px] px-[14px] rounded-full">1</p>
-                <p class="pr-[9px]">Data Pengirim</p>
+                <p class="pr-[9px]  ">Data Pengirim</p>
             </div>
 
             <div class="flex bg-[#9B9B9B] rounded-3xl text-white p-[6px] mr-[20px] justify-center items-center">
