--- a/Pilih-jenis-pengiriman.html
+++ b/Pilih-jenis-pengiriman.html
@@ -34,7 +34,7 @@
 
     <div class="flex flex-col justify-center items-center mt-[50px]">
         <p class="text-[#2D71B4] text-[40px] font-[600] mb-[10px]">Pilih Jenis Pengiriman</p>   
-        <hr class="w-[640px] border border-[#2D71B4] mb-[30px]">
+        <hr class="lg:w-[640px] md:w-[540px] w-full border border-[#2D71B4] mb-[30px]">
         <div class="flex flex-wrap justify-center items-center">
 
             <a href="./1 pengirim 1 penerima/1pengirim-1penerima.html">
