--- a/banyak pengirim ke satu penerima/data-penerima.html
+++ b/banyak pengirim ke satu penerima/data-penerima.html
@@ -53,7 +53,7 @@
     
     <div class="flex flex-col justify-center items-center mt-[50px]">
         <p class="text-[#2D71B4] text-[40px] font-[600] mb-[10px]">Banyak Pengirim ke 1 Penerima</p>   
-        <hr class="w-[852px] border border-[#2D71B4] mb-[10px]">
+        <hr class="lg:w-[852px] md:w-[752px] w-full border border-[#2D71B4] mb-[10px]">
         <div class="flex flex-row">
             <a href="./data-pengirim.html">
                 <div class="flex bg-[#2D71B4] rounded-3xl text-white p-[6px] mr-[20px] justify-center items-center">
