--- a/Cakupan-wilayah.html
+++ b/Cakupan-wilayah.html
@@ -77,7 +77,7 @@
             </div>
 
             <div class="tabel w-[100%]">
-                <table class="border-collapse border border-[#C2C2C2] p-2 p-2 w-[804px]">
+                <table class="border-collapse border border-[#C2C2C2] p-2 p-2 w-[380px] lg:w-[804px] md:w-[804px]">
                     <thead class="w-[402px]">
                         <tr>
                             <th class="border border-[#C2C2C2] p-2 p-2">Kabupaten/Kota</th>
