--- a/Cek-paket.html
+++ b/Cek-paket.html
@@ -52,7 +52,7 @@
         </div>
 
         <!-- search bar -->
-        <div class="card bg-white mt-[38px] lg:w-[1120px] flex flex-col justify-center ml-4 lg:ml-[65px] p-[20px] rounded-md w-[343px]">
+        <div class="card bg-white mt-[38px] lg:w-[1120px] flex flex-col justify-center ml-[60px] lg:ml-[65px] p-[20px] rounded-md w-[343px]">
             <div class="flex flex-col justify-center">
                 <p class="text-[#2D71B4] text-[30px] font-[600]">Lacak Paket Kuy</p>
                 <p class="text-[16px] font-[600] mb-2">Kode Resi :</p>
@@ -258,9 +258,9 @@
             <div id="accordionExample">
                 <div
                 class="lg:w-[540px] w-[343px] m-[20px] rounded-t-lg border border-neutral-200 bg-white mt-[48px]">
-                <h2 class="mb-0" id="headingOne">
+                <h2 class="mb-0" id="headingTwo">
                     <button
-                    class="group relative flex w-full items-center rounded-t-[15px] bg-white px-5 py-4 text-left text-base text-neutral-800 transition [overflow-anchor:none] hover:z-[2] focus:z-[3] focus:outline-none dark:bg-neutral-800 dark:text-white [&:not([data-te-collapse-collapsed])]:bg-white [&:not([data-te-collapse-collapsed])]:text-primary [&:not([data-te-collapse-collapsed])]:[box-shadow:inset_0_-1px_0_rgba(229,231,235)] dark:[&:not([data-te-collapse-collapsed])]:bg-neutral-800 dark:[&:not([data-te-collapse-collapsed])]:text-primary-400 dark:[&:not([data-te-collapse-collapsed])]:[box-shadow:inset_0_-1px_0_rgba(75,85,99)]" type="button" data-te-collapse-init data-te-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                    class="group relative flex w-full items-center rounded-t-[15px] bg-white px-5 py-4 text-left text-base text-neutral-800 transition [overflow-anchor:none] hover:z-[2] focus:z-[3] focus:outline-none dark:bg-neutral-800 dark:text-white [&:not([data-te-collapse-collapsed])]:bg-white [&:not([data-te-collapse-collapsed])]:text-primary [&:not([data-te-collapse-collapsed])]:[box-shadow:inset_0_-1px_0_rgba(229,231,235)] dark:[&:not([data-te-collapse-collapsed])]:bg-neutral-800 dark:[&:not([data-te-collapse-collapsed])]:text-primary-400 dark:[&:not([data-te-collapse-collapsed])]:[box-shadow:inset_0_-1px_0_rgba(75,85,99)]" type="button" data-te-collapse-init data-te-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
                     <p class="text-[#2D71B4] font-[600] text-[24px]">Detail Paket</p>
                     <span
                         class="ml-auto h-5 w-5 shrink-0 rotate-[-180deg] fill-[#336dec] transition-transform duration-200 ease-in-out group-[[data-te-collapse-collapsed]]:rotate-0 group-[[data-te-collapse-collapsed]]:fill-[#212529] motion-reduce:transition-none dark:fill-blue-300 dark:group-[[data-te-collapse-collapsed]]:fill-white">
@@ -269,7 +269,7 @@
                     </button>
                 </h2>
                 <div
-                    id="collapseOne" class="!visible" data-te-collapse-item data-te-collapse-show aria-labelledby="headingOne" data-te-parent="#accordionExample">
+                    id="collapseTwo" class="!visible" data-te-collapse-item data-te-collapse-show aria-labelledby="headingTwo" data-te-parent="#accordionExample">
                     <div class="px-5 py-4">
                         <div class="flex w-[490px] ">
                             <div class="flex flex-col">
