--- a/Profile.html
+++ b/Profile.html
@@ -50,7 +50,7 @@
                 </div>
         </div>
 
-        <div class="flex h-[252px] justify-center mt-[70px]">
+        <div class="flex flex-col md:flex-row lg:flex-row h-[252px] justify-center mt-[70px]">
             <!--Tabs navigation-->
             <ul
                 class="mr-4 flex list-none flex-col flex-wrap pl-0 bg-white border border-[#E7E7E7] rounded-md p-[20px] mt-3"
@@ -148,14 +148,14 @@
 
                     <!-- filter -->
                     <div class="flex text-[#9B9B9B] text-[15px] font-[600] justify-center">
-                        <p class="border border-[#E7E7E7] px-[10px] rounded-md mr-[10px] active:text-[#2D71B4] active:border-[#2D71B4]">Semua</p>
-                        <p class="border border-[#E7E7E7] px-[10px] rounded-md mr-[10px]">Belum Bayar</p>
-                        <p class="border border-[#E7E7E7] px-[10px] rounded-md mr-[10px]">Menunggu Konfirmasi</p>
-                        <p class="border border-[#E7E7E7] px-[10px] rounded-md mr-[10px]">Selesai</p>
+                        <p class="border border-[#E7E7E7] px-[10px] rounded-md mr-[10px] active:text-[#2D71B4] active:border-[#2D71B4] cursor-pointer">Semua</p>
+                        <p class="border border-[#E7E7E7] px-[10px] rounded-md mr-[10px] cursor-pointer">Belum Bayar</p>
+                        <p class="border border-[#E7E7E7] px-[10px] rounded-md mr-[10px] cursor-pointer">Menunggu Konfirmasi</p>
+                        <p class="border border-[#E7E7E7] px-[10px] rounded-md mr-[10px] cursor-pointer">Selesai</p>
                     </div>
 
                     <!-- card -->
-                    <div class="flex [20px]">
+                    <div class="flex flex-col [20px]">
                         <div class="flex flex-col px-[20px] border border-[#E7E7E7] ml-[10px] p-[20px] rounded-lg mt-[20px]">
                             <p class="text-[#2D71B4] text-[24px] font-[600] mb-[20px]">14 Juli 2023</p>
                             <div class="flex mb-[10px]">
