--- a/Login.html
+++ b/Login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="Cek-paket.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;700&family=Jost:wght@400;500;600;700&family=Montserrat:wght@200;500;800&family=Oxygen:wght@300;400;700&family=Poppins:wght@100;300;400;500;600;700&display=swap" rel="stylesheet">
