add resgristrasi page

--- a/Login.html
+++ b/Login.html
@@ -35,8 +35,8 @@
         </div>
     </div>
 
-    <div class="flex justify-center">
-        <div class="flex flex-col w-[347px] mt-[60px]">
+    <div class="flex justify-center justify-between flex-col md:flex-row lg:flex-row">
+        <div class="flex flex-col w-[347px] mt-[40px] lg:ml-[100px] md:ml-[90px] ml-[30px]">
             <p class="text-[36px] font-[600]">Registrasi</p>
             <label for="nama" class="mt-[30px]">Nama</label>
             <input type="text" name="nama" id="nama" class="border border-[#ABABAB] rounded-md p-2 w-[355px] mb-[20px]" placeholder="Nama Anda">
@@ -54,7 +54,7 @@
             <label for="alamat">Alamat</label>
             <textarea type="text" name="alamat" id="alamat" class="border border-[#ABABAB] rounded-md p-2 w-[355px] h-[88px]" placeholder="Nama Jalan"></textarea>
 
-            <div class="flex justify-end mb-[50px]">
+            <div class="flex justify-end">
                 <a href="./Profile.html">
                     <button class="bg-[#2D71B4] text-white w-[114px] h-[44px] rounded-lg mt-[30px]">Login</button>
                 </a>
@@ -62,7 +62,7 @@
         </div>
 
         <div class="">
-            <img src="" alt="">
+            <img src="./assets/register.png" alt="" class="h-[595px] hidden md:block lg:block">
         </div>
     </div>
 </div>
