--- a/Profile.html
+++ b/Profile.html
@@ -196,21 +196,42 @@
                     <div class="">
                         <p class="text-[#2D71B4] text-[30px] font-[600] pb-[10px]">Riwayat Point</p>
 
-                        <div class="flex flex-col">
+                        <div class="flex flex-col mb-4">
                             <div class="flex rounded-lg border border-[#E7E7E7] py-[10px] px-[20px] justify-between">
-                                <img src="" alt="">
 
-                                <div class="flex flex-col">
-                                    <p class="text-[#000000] font-[500]">Isi Coin</p>
-                                    <p class="text-[#707070] text-[14px] font-[500]">Transfer Bank</p>
-                                    <p class="text-[#707070] text-[14px] font-[500]">01 Jan 2023</p>
+                                <div class="flex">
+                                    <img src="./assets/coin.png" alt="icon-koin-kuy" class="w-[33px] h-[33px] mr-[12px]">
+    
+                                    <div class="flex flex-col">
+                                        <p class="text-[#000000] font-[500]">Isi Coin</p>
+                                        <p class="text-[#707070] text-[14px] font-[500]">Transfer Bank</p>
+                                        <p class="text-[#707070] text-[14px] font-[500]">01 Jan 2023</p>
+                                    </div>
                                 </div>
 
                                 <div class="justify-end">
                                     <p class="text-[#0C3AAE] text-[16px] font-[600]">+100.000</p>
                                 </div>
                             </div>
+                        </div>
 
+                        <div class="flex flex-col">
+                            <div class="flex rounded-lg border border-[#E7E7E7] py-[10px] px-[20px] justify-between">
+
+                                <div class="flex">
+                                    <img src="./assets/coin.png" alt="icon-koin-kuy" class="w-[33px] h-[33px] mr-[12px]">
+    
+                                    <div class="flex flex-col">
+                                        <p class="text-[#000000] font-[500]">Isi Coin</p>
+                                        <p class="text-[#707070] text-[14px] font-[500]">Transfer Bank</p>
+                                        <p class="text-[#707070] text-[14px] font-[500]">01 Jan 2023</p>
+                                    </div>
+                                </div>
+
+                                <div class="justify-end">
+                                    <p class="text-[#0C3AAE] text-[16px] font-[600]">+100.000</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
