--- a/Landing-page.html
+++ b/Landing-page.html
@@ -32,10 +32,10 @@
     </div>
 
     <!-- hero -->
-    <div class="hero flex flex-row lg:flex-col justify-center items-center">
+    <div class="hero flex flex-row xl:flex-col 2xl:flex-col :flex-col justify-center items-center">
         <img src="./assets/hero.jpeg" alt="hero-image-kuy" class="relative" class="w-full">
         <!-- lacak paket -->
-        <div class="flex lg:absolute md:absolute lg:top-[550px] lacak">
+        <div class="flex lg:absolute md:absolute xl:absolute 2xl:absolute md:top-[550px] xl:top-[550px] 2xl:top-[550px] lg:top-[550px] lacak">
             <div class="bg-white rounded-md w-full lg:w-[373px] md:w-[373px] mb-[15px] h-[341px] mr-[20px]">
                 <div class="p-[20px]">
                     <span class="text-[#2D71B4] font-[600] text-[24px]">Lacak Paket Kuy</span>
@@ -50,7 +50,7 @@
             </div>
             
             <!-- cek ongkir -->
-            <div class="bg-white rounded-md w-full lg:max-w-[860px] md:max-w-[860px] h-[341px]">
+            <div class="bg-white rounded-md w-full xl:max-w-[960px] 2xl:max-w-[960px] lg:max-w-[860px] md:max-w-[860px] h-[341px]">
                 <div class="bg-white rounded-md">
                     <div class="flex flex-col p-[20px] justify-around">
                         <span class="text-[#2D71B4] font-[600] text-[24px] mb-[44px]">Cek Ongkir</span>
@@ -100,7 +100,7 @@
     </div>
 
     <!-- service/layanan -->
-    <div class="flex flex-col lg:flex-row mb-[100px] mt-[400px] justify-evenly mx-[80px]">
+    <div class="flex flex-col md:flex-row xl:flex-row 2xl:flex-row lg:flex-row mb-[100px] mt-[400px] justify-evenly mx-[80px]">
         <div class="flex flex-col w-[350px]">
             <span class="text-[#2D71B4] text-[40px] font-[600]">Layanan Kita</span>
             <span class="text-[#5F5F5F] text-[17px] font-[400]">KUY reservasi dan kirim paketmu sekarang juga!</span>
@@ -153,12 +153,12 @@
     </div>
 
     <!-- etalase kuy -->
-    <div class="bg-[#CAFFE9] flex w-full lg:w-[1100px] items-center rounded-md md:ml-[50px] lg:ml-[80px] flex-col lg:flex-row">
+    <div class="bg-[#CAFFE9] flex w-full lg:w-[1100px] md:w-[1100px] xl:w-[1200px] 2xl:w-[1200px] items-center rounded-md md:ml-[50px] lg:ml-[80px] flex-col lg:flex-row">
         <img src="./assets/people2.png" alt="assets-kuy" class="w-[285px] h-[305px]">
 
         <div class="flex flex-col items-center">
             <span class="text-[#2D71B4] text-[38px] font-[700] text-center p-[10px]">Kuy Support Produk lokal</span>
-            <span class="text-[18px] text-[#5F5F5F] font-[400] text-center mb-[30px] w-[75%] lg:w-full md:w-full">Mau produk kamu ditampilkan disini? atau dapat kan benefit lebih dengan join bersama kami</span>
+            <span class="text-[18px] text-[#5F5F5F] font-[400] text-center mb-[30px] w-[75%] xl:w-full 2xl:w-full lg:w-full md:w-full">Mau produk kamu ditampilkan disini? atau dapat kan benefit lebih dengan join bersama kami</span>
             <div class="flex">
                 <button class="bg-[#2D71B4] text-white rounded-md text-[18px] font-[600] px-[16px] py-[12px] mr-[8px]">Tampilkan Produk Kamu</button>
                 <div class="flex bg-[#1CAD4E] text-white rounded-md text-[18px] font-[600] px-[16px] py-[12px]">
@@ -190,7 +190,7 @@
                 </div>
             </div>
 
-            <div class="bg-white max-w-[360px] rounded-xl relative lg:mr-[1.25rem] md:mr-[1.25rem] mb-4">
+            <div class="bg-white max-w-[360px] rounded-xl relative xl:mr-[1.25rem] 2xl:mr-[1.25rem] lg:mr-[1.25rem] md:mr-[1.25rem] mb-4">
                 <img src="./assets/etalase.jpeg" alt="etalase-kuy" class="max-w-[360px] mb-[10px]">
                 <div class="px-[10px]">
                     <span class="text-[#4E4E4E] text-[20px] font-[700]">Cikutra Shop</span>
@@ -217,7 +217,7 @@
     </div>
 
     <!-- berita dan promo -->
-    <div class="flex flex-col lg:flex-row md:flex-row lg:justify-around md:justify-around mb-[30px]">
+    <div class="flex flex-col xl:flex-row 2xl:flex-row lg:flex-row md:flex-row lg:justify-around md:justify-around mb-[30px]">
         <div class="flex flex-col ml-[10px] w-[850px] p-6 lg:p-0 md:p-0">
             <span class="text-[#0065C1] text-[40px] font-[600] justify-start">Berita & Promo</span>
             <p class="text-[#5F5F5F] text-[18px] font-[400]">Nantikan update terbaru dari kami</p>
@@ -228,7 +228,7 @@
         </div>
     </div>
 
-    <div class="flex flex-wrap justify-center mb-[100px] px-7 lg:p-0 md:p-0">
+    <div class="flex flex-wrap justify-center mb-[100px] px-7 xl:p-0 2xl:p-0 lg:p-0 md:p-0">
         <div class="mr-[48px] mb-4">
             <img src="./assets/etalase.jpeg" alt="etalase-kuy" class="h-[19.462rem] md:h-[22.462rem] lg:h-[22.462rem] w-[33.12rem]">
             <p class="text-[#5F5F5F] text-[16px] py-[10px]">12 Desember 2023</p>
@@ -268,19 +268,19 @@
 
     <!-- tiket bus and travel -->
     <div class="flex flex-wrap mb-[100px] justify-center">
-        <div class="flex flex-col mr-[20px] mt-4 p-6 lg:p-0 md:p-0">
+        <div class="flex flex-col mr-[20px] mt-4 p-6 xl:p-0 2xl:p-0 lg:p-0 md:p-0">
             <p class="text-[#0065C1] text-[40px] font-[600]">Cari Tiket Bus & Travel?</p>
             <p class="max-w-[563px] text-[#5F5F5F] font-[400] text-[18px] mb-[20px]">Ada banyak pilihan shuttle/travel terbaik dengan rute terlengkap untuk teman perjalanan kamu</p>
             <button class="bg-[#2D71B4] text-white rounded-md text-[18px] font-[600] px-[16px] py-[12px] mr-[8px] max-w-[207px]">Kunjungi Sekarang</button>
         </div>
 
         <div class="mt-4">
-            <img src="./assets/diskon.jpeg" alt="diskon-kuy" class="max-w-[420px] lg:max-w-[540.5px] md:max-w-[540.5px] h-[190px] rounded-md">
+            <img src="./assets/diskon.jpeg" alt="diskon-kuy" class="max-w-[420px] xl:max-w-[640px] 2xl:max-w-[640px] lg:max-w-[540.5px] md:max-w-[540.5px] h-[190px] rounded-md">
         </div>
     </div>
 
     <!-- footer -->
-    <div class="bg-[#E2F7FC] flex flex-col lg:flex-row md:flex-row pl-[70px] lg:pl-0 md:pl-0 md:justify-evenly lg:justify-evenly pt-[65px] pb-[50px]">
+    <div class="bg-[#E2F7FC] flex flex-col xl:flex-row 2xl:flex-row lg:flex-row md:flex-row xl:flex-row 2xl:flex-row pl-[70px] xl:pl-0 2xl:pl-0 lg:pl-0 md:pl-0 md:justify-evenly lg:justify-evenly md:justify-evenly xl:justify-evenly 2xl:justify-evenly pt-[65px] pb-[50px]">
         <div class="flex flex-wrap flex-col mr-[60px]">
             <a href="./Landing-page.html"><img src="./assets/logo-footer.png" alt="logo-kuy" class="max-w-[285px]"></a>
             <p class="text-black text-[18px] font-[600] mt-[20px]">Download aplikasinya di</p>
