--- a/1 pengirim ke banyak penerima/data-penerima.html
+++ b/1 pengirim ke banyak penerima/data-penerima.html
@@ -53,7 +53,7 @@
     
     <div class="flex flex-col justify-center items-center mt-[50px]">
         <p class="text-[#2D71B4] text-[40px] font-[600] mb-[10px]">1 Pengirim ke Banyak Penerima</p>   
-        <hr class="lg:w-[852px] md:w-[752px] w-full border border-[#2D71B4] mb-[10px]">
+        <hr class="lg:w-[852px] md:w-[752px] xl:w-[752px] 2xl:w-[752px] w-full border border-[#2D71B4] mb-[10px]">
         <div class="flex flex-row">
             <a href="./data-pengirim.html">
                 <div class="flex bg-[#2D71B4] rounded-3xl text-white p-[6px] mr-[20px] justify-center items-center">
@@ -78,12 +78,12 @@
     <!-- card -->
     <div class="p-[30px] mt-[20px] text-[14px] font-[600] flex justify-center rounded-md text-[#000000]">
         <div class="flex flex-col justify-center bg-white p-[30px] rounded-lg">
-            <div class="flex mb-[10px] ml-[55px] lg:ml-1 md:ml-1">
+            <div class="flex mb-[10px] ml-[55px] lg:ml-1 md:ml-1 xl:ml-1 2xl:ml-1">
                 <img src="../assets/pengiriman/Pengirim.png" alt="icon-pengirim-kuy" class="w-[36px] h-[36px]">
                 <p class="text-[24px] font-[600] ml-[10px] ">Detail Pengirim</p>
             </div>
 
-            <div class="flex mb-[10px] ml-[55px] lg:ml-1 md:ml-1">
+            <div class="flex mb-[10px] ml-[55px] lg:ml-1 md:ml-1 xl:ml-1 2xl:ml-1">
                 <p class="mr-[10px]">Pemesan adalah Pengirim</p>
                 <div class="relative inline-block w-10 mr-2 align-middle select-none transition duration-200 ease-in h-6">
                     <input type="checkbox" name="toggle" id="toggle" class="toggle-checkbox absolute block w-6 h-6 rounded-full bg-white border-4 appearance-none cursor-pointer"/>
@@ -96,7 +96,7 @@
                     <label for="teleponPengirim">No Telepon Pengirim</label>
                     <input type="text" name="teleponPengirim" id="teleponPengirim" placeholder="08xxxxx" class="border border-[#E7E7E7] rounded-md px-[10px] py-[5px] mt-2">
                 </div>
-                <div class="flex flex-col w-[343px] lg:ml-[20px] md:ml-[15px]">
+                <div class="flex flex-col w-[343px] lg:ml-[20px] xl:ml-[20px] 2xl:ml-[20px] md:ml-[15px]">
                     <label for="namaPengirim">Nama Pengirim</label>
                     <input type="text" name="namaPengirim" id="namaPengirim" placeholder="Isi Nama" class="border border-[#E7E7E7] rounded-md px-[10px] py-[5px] mt-2">
                 </div>
@@ -117,7 +117,7 @@
                     </div>
                     <input type="text" name="alamatPenerima" id="alamatPenerima" class="h-[66px] border border-[#E7E7E7] rounded-md mt-2 px-[10px] py-[5px] " placeholder="Nama Kota, Jalan">
                 </div>
-                <div class="flex flex-col w-[343px] lg:ml-[20px] md:ml-[15px]">
+                <div class="flex flex-col w-[343px] lg:ml-[20px] md:ml-[15px] xl:ml-[20px] 2xl:ml-[20px]">
                     <label for="patokan" class="mt-[20px]">Patokan</label>
                     <input type="text" name="patokan" id="patokan" placeholder="Opsional" class="border border-[#E7E7E7] rounded-md px-[10px] py-[5px] mt-2">
                 </div>
@@ -138,7 +138,7 @@
                     </a>
                 </div>
 
-                <div class="h-[98px] w-[343px] flex flex-col mt-[18px] lg:ml-[20px] md:ml-[15px]">
+                <div class="h-[98px] w-[343px] flex flex-col mt-[18px] lg:ml-[20px] md:ml-[15px] xl:ml-[20px] 2xl:ml-[20px]">
                     <label for="jenisBarang" class="">Jenis Barang</label>
                     <select name="jenisBarang" id="jenisBarang" class="border border-[#E7E7E7] rounded-md px-[10px] py-[5px] mt-2">
                         <option value="" disabled selected hidden class="text-[#5F5F5F]">Pilih Jenis</option>
@@ -152,7 +152,7 @@
             </div>
 
             <div class="flex flex-wrap justify-center">
-                <div class="w-[343px] h-[98px] border border-[#2D71B4] rounded-md px-[10px] py-[6px] lg:my-[20px] md:my-[15px] flex relative">
+                <div class="w-[343px] h-[98px] border border-[#2D71B4] rounded-md px-[10px] py-[6px] lg:my-[20px] md:my-[15px] xl:my-[15px] 2xl:my-[15px] flex relative">
                     <div class="flex flex-col justify-between">
                         <div class="flex-col flex">
                             <p class="text-[12px]">Pilih Ukuran Barang</p>
@@ -173,7 +173,7 @@
                     </div>
                 </div>
 
-                <div class="flex flex-col w-[343px] lg:ml-[20px] md:ml-[15px]">
+                <div class="flex flex-col w-[343px] lg:ml-[20px] md:ml-[15px] xl:ml-[20px] 2xl:ml-[20px]">
                     <label for="patokan" class="mt-[20px]">Patokan</label>
                     <input type="text" name="patokan" id="patokan" placeholder="Opsional" class="border border-[#E7E7E7] rounded-md px-[10px] py-[5px] mt-2">
                 </div>
