--- a/Landing-page.html
+++ b/Landing-page.html
@@ -102,14 +102,14 @@
     <!-- service/layanan -->
     <div class="flex flex-col md:flex-row xl:flex-row 2xl:flex-row lg:flex-row mb-[100px] mt-[400px] justify-evenly mx-[80px]">
         <div class="flex flex-col w-[350px]">
-            <span class="text-[#2D71B4] text-[40px] font-[600]">Layanan Kita</span>
+            <span class="text-[#2D71B4] text-[30px] 2xl:text-[40px] xl:text-[40px] lg:text-[40px] md:text-[40px] font-[600]">Layanan Kita</span>
             <span class="text-[#5F5F5F] text-[17px] font-[400]">KUY reservasi dan kirim paketmu sekarang juga!</span>
 
             <div class="flex flex-col mt-4">
-                <a href="./Pilih-jenis-pengiriman.html" class="bg-[#2D71B4] text-white rounded-md py-[12px] mb-[14px] text-center mt-[12px]">
+                <a href="./Pilih-jenis-pengiriman.html" class="bg-[#2D71B4] w-[85%] 2xl:w-full xl:w-full lg:w-full md:w-full text-white rounded-md py-[12px] mb-[14px] text-center mt-[12px]">
                     <button class="">Reservasi Sekarang</button>
                 </a>
-                <button class="bg-[#079849] text-white rounded-md py-[12px]">Whatsapp</button> 
+                <button class="bg-[#079849] text-white rounded-md py-[12px] w-[85%] 2xl:w-full xl:w-full lg:w-full md:w-full">Whatsapp</button> 
             </div>
         </div>
         
@@ -121,7 +121,7 @@
                         <img src="./assets/i-sameday.png" alt="icon-sameday-kuy" class="w-[50px] h-[50px] mr-4">
                         <span class="text-[#4E4E4E] text-[30px] font-[600] mb-[12px]">Sameday</span>
                     </div>
-                    <span class="text-[#5F5F5F] text-[16px] font-[400] mb-[12px]">Kirim barang sangat cepat, kirim hari ini sampai hari ini juga !</span>
+                    <span class="text-[#5F5F5F] text-[16px] font-[400] mb-[12px] w-[90%] 2xl:w-full xl:w-full lg:w-full md:w-full">Kirim barang sangat cepat, kirim hari ini sampai hari ini juga !</span>
                     <span class="text-[#5F5F5F] text-[16px] font-[500]">Mulai dari</span>
                     <span class="text-[#3375B8] text-[35px] font-[700]">Rp. 10.000</span>
                 </div>
@@ -178,7 +178,7 @@
         </div>
 
         <div class="flex flex-wrap justify-center">
-            <div class="bg-white max-w-[360px] rounded-xl relative mr-[1.25rem] mb-4">
+            <div class="bg-white max-w-[360px] rounded-xl relative mr-[1.25rem] mb-4 ml-4">
                 <img src="./assets/etalase.jpeg" alt="etalase-kuy" class="max-w-[360px] mb-[10px]">
                 <div class="px-[10px]">
                     <span class="text-[#4E4E4E] text-[20px] font-[700]">Cikutra Shop</span>
@@ -230,10 +230,10 @@
 
     <div class="flex flex-wrap justify-center mb-[100px] px-7 xl:p-0 2xl:p-0 lg:p-0 md:p-0">
         <div class="mr-[48px] mb-4">
-            <img src="./assets/etalase.jpeg" alt="etalase-kuy" class="h-[19.462rem] md:h-[22.462rem] lg:h-[22.462rem] w-[33.12rem]">
+            <img src="./assets/etalase.jpeg" alt="etalase-kuy" class="h-[19.462rem] md:h-[22.462rem] lg:h-[22.462rem] w-[3  3.12rem]">
             <p class="text-[#5F5F5F] text-[16px] py-[10px]">12 Desember 2023</p>
-            <p class="text-[#4E4E4E] text-[30px] font-[600] mb-[17.2px]">CikutraOlshop</p>
-            <p class="text-[#5F5F5F] font-[400] text-[18px] max-w-[530px]">Macam macam kaos polos dewasa , bikin style kmau makin kece beuuddd</p>
+            <p class="text-[#4E4E4E] text-[30px] font-[600] lg:mb-[17.2px] md:mb-[17.2px] xl:mb-[17.2px] 2xl:mb-[17.2px]">CikutraOlshop</p>
+            <p class="text-[#5F5F5F] font-[400] text-[18px] max-w-[530px] mb-4">Macam macam kaos polos dewasa , bikin style kmau makin kece beuuddd</p>
         </div>
 
         <div class="flex flex-col ">
@@ -287,14 +287,14 @@
             <img src="./assets/googleplaystore.png" alt="icon-google-lay-kuy" class="w-[229px] mt-2">
         </div>
         
-        <div class="flex flex-col flex-wrap">
+        <div class="flex flex-col flex-wrap mt-4 lg:mt-0 md:mt-0 xl:mt-0 2xl:mt-0">
             <p class="text-black text-[18px] font-[600] pb-[10px] mb-[10px]">Lainnya</p>
             <a href="" class="text-[#5F5F5F] mb-[10px]">Syarat dan Ketentuan</a>
             <a href="" class="text-[#5F5F5F] mb-[10px]">Pusat Bantuan</a>
             <a href="" class="text-[#5F5F5F] ">FAQ</a>
         </div>
 
-        <div class="flex flex-col">
+        <div class="flex flex-col mt-4 lg:mt-0 md:mt-0 xl:mt-0 2xl:mt-0">
             <p class="text-black text-[18px] font-[600] pb-[20px]">Informasi Kontak</p>
             <div class="flex">
                 <img src="./assets/i-whatsapp.png" alt="icon-whatsapp-kuy" class="w-[23px] h-[23px] mr-[10px]">
@@ -302,7 +302,7 @@
             </div>
         </div>
 
-        <div class="flex flex-col">
+        <div class="flex flex-col mt-4 lg:mt-0 md:mt-0 xl:mt-0 2xl:mt-0">
             <p class="text-black text-[18px] font-[600] pb-[20px]">Sosial Media</p>
             <div class="flex">
                 <a href="">
